--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,12 @@
 
    <body>
       <div class="container">
-         <h1>Manage Node.js projects and npm packages using package.json</h1>
-         <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+         <h1>FreeCodeCamp API Basejump: URL Shortener Microservice</h1>
+         <h3>User stories</h3>
+        <ul>
+          <li></li>
+          
+        </ul>
       </div>
    </body>
 
