--- a/views/index.html
+++ b/views/index.html
@@ -11,11 +11,19 @@
    <body>
       <div class="container">
          <h1>FreeCodeCamp API Basejump: URL Shortener Microservice</h1>
-         <h3>User stories</h3>
+         <h3>User stories:</h3>
         <ul>
-          <li></li>
-          
+          <li>I can pass a URL as a parameter and I will receive a shortened URL in the JSON response.</li>
+          <li>When I visit that shortened URL, it will redirect me to my original link.</li>
         </ul>
+        <h3>Example creation usage:</h3>
+        <code>https://saurabh-shorturl.glitch.me/new/https://www.google.com</code>
+        <h3>Example creation output</h3>
+        <code>{"url":"https://www.google.com","shortURL":"https://saurabh-shorturl.glitch.me/2120"}</code>
+        <h3>Usage:</h3>
+        <code>https://saurabh-shorturl.glitch.me/2120</code>
+        <h3>Will redirect to:</h3>
+        <code>https://www.google.com/</code>
       </div>
    </body>
 
